--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "author": "Gustavo <gustavosohne38@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --exec babel-node src/index.js"
+    "dev": "nodemon --exec babel-node src/index.js",
+    "start": "node --exec babel-node src/index.js"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.27",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
